feat: prevent caching across privacy workflows
